tests/baselines/reference/classWithProtectedProperty(strict=true).errors.txt
classWithProtectedProperty.ts(4,15): error TS7008: Member 'x' implicitly has an 'any' type.
classWithProtectedProperty.ts(9,22): error TS7008: Member 'e' implicitly has an 'any' type.


==== classWithProtectedProperty.ts (2 errors) ====
    // accessing any protected outside the class is an error
    
    class C {
        protected x;
                  ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
        protected a = '';
        protected b: string = '';
        protected c() { return '' }
        protected d = () => '';
        protected static e;
                         ~
!!! error TS7008: Member 'e' implicitly has an 'any' type.
        protected static f() { return '' }
        protected static g = () => '';
    }
    
    class D extends C {
        method() {
            // No errors
            var d = new D();
            var r1: string = d.x;
            var r2: string = d.a;
            var r3: string = d.b;
            var r4: string = d.c();
            var r5: string = d.d();
            var r6: string = C.e;
            var r7: string = C.f();
            var r8: string = C.g();
        }
    }